fixed z-index for Opera problem

--- a/css/demo-styles.css
+++ b/css/demo-styles.css
@@ -140,7 +140,7 @@ header a {
   right: 0;
   top: 0;
   opacity: 0;
-  
+  z-index:-1;
   -webkit-transform-origin: 100% 0%;
   -ms-transform-origin: 100% 0%;
   -o-transform-origin: 100% 0%;
@@ -565,17 +565,20 @@ input {
   0% {
     -webkit-transform: rotateY(-90deg) translateZ(5em);
     transform: rotateY(-90deg) translateZ(5em);
-    opacity: 0
+    opacity: 0;
+    z-index:-1;
   }
 
   30% {
-    opacity: 1
+    opacity: 1;
+    z-index:1;
   }
 
   100% {
     -webkit-transform: rotateY(0deg) translateZ(0);
     transform: rotateY(0deg) translateZ(0);
-    opacity: 1
+    opacity: 1;
+    z-index:1;
   }
 }
 
@@ -695,11 +698,13 @@ input {
     -o-transform: rotateY(-90deg) translateZ(5em);
     transform: rotateY(-90deg) translateZ(5em);
     opacity: 0;
+    z-index:-1;
     
   }
 
   30% {
-    opacity: 1
+    opacity: 1;
+    z-index:1;
   }
 
   100% {
@@ -836,11 +841,13 @@ input {
     -ms-transform: rotateY(-90deg) translateZ(5em);
     -o-transform: rotateY(-90deg) translateZ(5em);
     transform: rotateY(-90deg) translateZ(5em);
-    opacity: 0
+    opacity: 0;
+    z-index:-1;
   }
 
   30% {
-    opacity: 1
+    opacity: 1;
+    z-index:1;
   }
 
   100% {
@@ -848,7 +855,8 @@ input {
     -ms-transform: rotateY(0deg) translateZ(0);
     -o-transform: rotateY(0deg) translateZ(0);
     transform: rotateY(0deg) translateZ(0);
-    opacity: 1
+    opacity: 1;
+    z-index:1;
   }
 }
 
